--- a/patheon.html
+++ b/patheon.html
@@ -162,59 +162,34 @@
 
 
                         <!-- Row -->
-                        <!-- <div class="vc_row full">
+                        <div class="vc_row full">
 
                             <div class="container">
 
                                 <figure class="has-animation" data-delay="50" >
-                                    <img src="images/projects/ss01.jpg" alt="Image Title">
-                                    <figcaption>Image Caption</figcaption>
+                                    <img src="images/projects/path01.jpg" alt="Image Title">
                                 </figure>
 
                             </div>
 
-                        </div> -->
+                        </div>
                         <!--/Row -->
 
-                        <!-- Row -->
-                          <!-- <div class="vc_row row_padding_top row_padding_bottom">
+												<!-- Row -->
+												<div class="vc_row full">
 
-                              <div class="container">
+														<div class="container">
 
-                                  <div class="one_third has-animation" data-delay="10">
-                                  	<h4>The Problem</h4>
+																<figure class="has-animation" data-delay="50" >
+																		<img src="images/projects/path02.jpg" alt="Image Title">
+																</figure>
 
-                                  </div>
+														</div>
 
-                                  <div class="two_third has-animation last" data-delay="50">
-                                      <p>Acquiring feedback from commuters on their experience in using Toronto’s transportation systems with surveys and interviews, we were able to understand problems they face and solutions they believe can improve their travel.<br><br> Our research involved conducting surveys that would help us find out whether or not residents of Toronto felt satisfied with their ability to move around the city effectively. Results indicate that many citizens feel unsatisfied with the current method of transportation in the city and have no hope for imminent development plans.<br><br> A severely outdated and primitive subway signage system plagues TTC users by doing nothing to provide passenger cart and platform distribution. Paired with a complete lack of wayfinding tools, the TTC is in need of an overhaul. Our city is growing, and our transit system should grow with it.</p>
-
-                                  </div>
-
-                              </div>
-
-                          </div> -->
-                          <!--/Row -->
+												</div>
+												<!--/Row -->
 
 
-													<!-- <div class="vc_row full row_padding_bottom"> -->
-														<!-- <figcaption>2D AR Markers</figcaption> -->
-
-															<!-- <div class="container has-animation" data-delay="100">
-																	<figcaption>2D AR Markers</figcaption>
-																	<br><br>
-																	<div class="carousel">
-																			<div class="slide"><img src="images/projects/path01.png" alt="Image Title"></div>
-																			<div class="slide"><img src="images/projects/path03.png" alt="Image Title"></div>
-																			<div class="slide"><img src="images/projects/path04.png" alt="Image Title"></div>
-																			<div class="slide"><img src="images/projects/path05.png" alt="Image Title"></div>
-																	</div>
-
-															</div>
-
-													</div> -->
-
-                        <!-- Row -->
 
                     </div>
                 	<!--/Main Page Content -->
