--- a/bite-rite.html
+++ b/bite-rite.html
@@ -302,9 +302,9 @@
 			<!-- Project Navigation -->
 			<div id="project-nav">
 				<div class="next-project-wrap">
-					<div class="next-project-image" style="background-image:url(images/3d-hero.jpg)"></div>
-					<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="3d-exploration.html">
-						<div class="main-title">Rising <span>Temp</span></div>
+					<div class="next-project-image" style="background-image:url(images/kendrick-hero.jpg)"></div>
+					<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="kendrick.html">
+						<div class="main-title">Kendrick <span>Lamar</span></div>
 						<div class="main-subtitle">Next Project</div>
 					</a>
 				</div>
