--- a/kendrick.html
+++ b/kendrick.html
@@ -348,9 +348,9 @@
 					<!-- Project Navigation -->
 					<div id="project-nav">
 						<div class="next-project-wrap">
-							<div class="next-project-image" style="background-image:url(images/bite-hero.jpg)"></div>
-							<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="bite-rite.html">
-								<div class="main-title">Bite <span>Rite</span></div>
+							<div class="next-project-image" style="background-image:url(images/rising-hero.jpg)"></div>
+							<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="rising-temp.html">
+								<div class="main-title">Rising <span>Temp</span></div>
 								<div class="main-subtitle">Next Project</div>
 							</a>
 						</div>
