--- a/patheon.html
+++ b/patheon.html
@@ -197,9 +197,9 @@
                     <!-- Project Navigation -->
                     <div id="project-nav">
                         <div class="next-project-wrap">
-                            <div class="next-project-image" style="background-image:url(images/02hero.jpg)"></div>
-                            <a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="project02.html">
-                                <div class="main-title">Novaroom <span>Design</span></div>
+                            <div class="next-project-image" style="background-image:url(images/bite-hero.jpg)"></div>
+                            <a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="bite-rite.html">
+                                <div class="main-title">Bite <span>Rite</span></div>
                                 <div class="main-subtitle">Next Project</div>
                             </a>
                         </div>
