--- a/rising-temp.html
+++ b/rising-temp.html
@@ -193,9 +193,9 @@
 				<!-- Project Navigation -->
 				<div id="project-nav">
 					<div class="next-project-wrap">
-						<div class="next-project-image" style="background-image:url(images/kendrick-hero.jpg)"></div>
-						<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="kendrick.html">
-							<div class="main-title">Kendrick <span>Lamar</span></div>
+						<div class="next-project-image" style="background-image:url(images/usability-hero.jpg)"></div>
+						<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="usability.html">
+							<div class="main-title">Usability <span>Test</span></div>
 							<div class="main-subtitle">Next Project</div>
 						</a>
 					</div>
