--- a/usability.html
+++ b/usability.html
@@ -76,7 +76,7 @@
 													<li><a class="ajax-link" href="bite-rite.html" data-type="page-transition">Bite Rite</a></li>
 													<li><a class="ajax-link" href="kendrick.html" data-type="page-transition">Kendrick</a></li>
 													<li><a class="ajax-link" href="rising-temp.html" data-type="page-transition">Rising Temp</a></li>
-                          <li><a class="ajax-link" href="rising-temp.html" data-type="page-transition">Usability Test</a></li>
+                          <li><a class="ajax-link" href="usability.html" data-type="page-transition">Usability Test</a></li>
 												</ul>
 											</li>
 											<li class="link menu-timeline"><a class="ajax-link link" data-type="page-transition" href="about.html">About</a></li>
