--- a/rising-temp.html
+++ b/rising-temp.html
@@ -154,6 +154,7 @@
 								<h4>About the Project</h4>
 								<h7>
 									<dl>Experience Website</dl>
+									<dl>Research</dl>
 									<dl>Personal Project</dl>
 								</h7>
 							</div>
@@ -188,7 +189,7 @@
 					</div>
 					<!--/Row
 				</div>
-				<!--/Main Page Content -->
+				<! /Main Page Content -->
 
 				<!-- Project Navigation -->
 				<div id="project-nav">
