--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 									<a class="ajax-link-project" data-type="page-transition" href="usability.html">
 										<div class="slide-title" data-number="05"><span>Usability Test</span></div>
 									</a>
-									<div class="slide-caption" data-slide-caption="5">Testing the performance of the zero-user interface device, the Google Home Mini.</div>
+									<div class="slide-caption" data-slide-caption="5">Testing the performance of the the Google Home Mini.</div>
 								</div>
 								<!--/Section Slide -->
 
