--- a/usability.html
+++ b/usability.html
@@ -111,7 +111,7 @@
 						<div id="hero-caption" class="text-align-center">
 							<div class="inner">
 								<h1 class="hero-title">Usability <span>Test</span></h1>
-								<h2 class="hero-subtitle">Testing the performance of the the Google Home Mini.</h2>
+								<h2 class="hero-subtitle">Testing the performance of the Google Home Mini.</h2>
 
 								<div class="scroll-down-wrap no-border link">
 									<a href="#" class="section-down-arrow ">
