--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 								<!--/Section Slide -->
 
 								<!-- Section Slide -->
-								<div class="swiper-slide active" data-number="02" data-slide="2">
+								<div class="swiper-slide" data-number="02" data-slide="2">
 									<a class="ajax-link-project" data-type="page-transition" href="kendrick.html">
 										<div class="slide-title" data-number="02"><span>Bite Rite</span></div>
 									</a>
