--- a/patheon.html
+++ b/patheon.html
@@ -148,6 +148,7 @@
                 										<dl>Wayfinding</dl>
                 										<dl>Augmented Reality</dl>
                 										<dl>Prototype</dl>
+																		<dl>Prototype</dl>
                 									</h7>
                                 </div>
 
