rising temp full row

--- a/rising-temp.html
+++ b/rising-temp.html
@@ -169,7 +169,7 @@
 					<!--/Row -->
 
 					<!-- Row -->
-					<div class="vc_row row_padding_top row_padding_bottom has-animation" data-delay="10">
+					<div class="vc_row full" data-delay="10">
 
 						<div class="container">
 
