behance link update

--- a/bite-rite.html
+++ b/bite-rite.html
@@ -338,7 +338,7 @@
 			<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/sonicakat" target="_blank">Ig</a></span></li>
 			<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/in/sonicakatoch" target="_blank">in</a></span></li>
 			<li><span class="parallax-wrap"><a class="parallax-element" href="https://twitter.com/sonicakatoch" target="_blank">Tw</a></span></li>
-			<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.net/sonicakato64a4" target="_blank">Be</a></span></li>
+			<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.net/sonicakatoch" target="_blank">Be</a></span></li>
 		</ul>
 	</div>
 
