--- a/usability.html
+++ b/usability.html
@@ -143,7 +143,7 @@
 							<div class="container">
 
 								<div class="one_third has-animation" data-delay="10">
-									<h4>Test Objectives</h4>
+									<h4>About the Project</h4>
 									<h7>
 										<dl>Usability Test</dl>
 										<dl>Design & Research</dl>
@@ -152,7 +152,7 @@
 								</div>
 
 								<div class="two_third has-animation last" data-delay="50">
-									<p>The goals of the usability test will determine the performance of the Google Home Mini, user’s interactions with the voice-automated system, determine design inconsistencies & usability problem areas within the zero-user interface, and identify concerns to improve its efficiency, productivity and end-user satisfaction.</p>
+									<p>This project was conducted to determine the performance of the Google Home Mini device. I was able to test user’s interaction with its voice-automated feature, discover design flaws, and identify methods to improve efficiency.</p>
 									<!-- <a href="https://www.behance.net/gallery/75810985/Bite-Rite" target="_blank" class="link"><span>Read More</span></a> -->
 								</div>
 
