--- a/rising-temp.html
+++ b/rising-temp.html
@@ -222,7 +222,7 @@
 			</div>
 		</div> -->
 
-		<div class="socials-wrap">
+		<!-- <div class="socials-wrap">
 			<div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
 			<div class="socials-text">Follow Me</div>
 			<ul class="socials">
@@ -231,7 +231,7 @@
 				<li><span class="parallax-wrap"><a class="parallax-element" href="https://twitter.com/sonicakatoch" target="_blank">Tw</a></span></li>
 				<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.net/sonicakatoch" target="_blank">Be</a></span></li>
 			</ul>
-		</div>
+		</div> -->
 
 	</div>
 </footer>
