--- a/usability.html
+++ b/usability.html
@@ -76,7 +76,7 @@
 													<li><a class="ajax-link" href="bite-rite.html" data-type="page-transition">Bite Rite</a></li>
 													<li><a class="ajax-link" href="kendrick.html" data-type="page-transition">Kendrick</a></li>
 													<li><a class="ajax-link" href="rising-temp.html" data-type="page-transition">Rising Temp</a></li>
-                          <li><a class="ajax-link" href="usability.html" data-type="page-transition">Usability Test</a></li>
+													<li><a class="ajax-link" href="usability.html" data-type="page-transition">Usability Test</a></li>
 												</ul>
 											</li>
 											<li class="link menu-timeline"><a class="ajax-link link" data-type="page-transition" href="about.html">About</a></li>
@@ -161,66 +161,66 @@
 						</div>
 						<!--/Row -->
 
-				<!-- Row -->
-				<div class="vc_row full">
+						<!-- Row -->
+						<div class="vc_row full">
 
-					<div class="container">
+							<div class="container">
 
-						<figure class="has-animation" data-delay="50" >
-							<img src="images/projects/usability01.jpg" alt="Image Title">
-						</figure>
+								<figure class="has-animation" data-delay="50" >
+									<img src="images/projects/usability01.jpg" alt="Image Title">
+								</figure>
+
+							</div>
+
+						</div>
+						<!--/Row -->
 
 					</div>
+					<!--/Main Page Content -->
 
+					<!-- Project Navigation -->
+					<div id="project-nav">
+						<div class="next-project-wrap">
+							<div class="next-project-image" style="background-image:url(images/patheon-hero.jpg)"></div>
+							<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="patheon.html">
+								<div class="main-title">Patheon<span></div>
+									<div class="main-subtitle">Next Project</div>
+								</a>
+							</div>
+						</div>
+						<!--/Project Navigation -->
+
+
+					</div>
+					<!--/Main Content -->
 				</div>
-				<!--/Row -->
-
-			</div>
-			<!--/Main Page Content -->
-
-			<!-- Project Navigation -->
-			<div id="project-nav">
-				<div class="next-project-wrap">
-					<div class="next-project-image" style="background-image:url(images/patheon-hero.jpg)"></div>
-					<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="patheon.html">
-						<div class="main-title">Patheon<span></div>
-						<div class="main-subtitle">Next Project</div>
-					</a>
-				</div>
-			</div>
-			<!--/Project Navigation -->
+				<!--/Main -->
 
 
-		</div>
-		<!--/Main Content -->
+				<!-- Footer -->
+				<footer class="hidden">
+					<div id="footer-container">
+
+						<!-- <div class="copyright-wrap">
+						<div class="copyright-icon"><i class="fa fa-copyright" aria-hidden="true"></i></div>
+						<div class="copyright-text">Copyright</div>
+						<div class="copyright">
+						<p>2018 © <a class="link" target="_blank" href="https://www.clapat.com/themes/grenada/">Grenada Theme</a>. Design by <a class="link" target="_blank" href="https://www.clapat.com/">Clapat</a>.</p>
+					</div>
+				</div> -->
+
+				<!-- <div class="socials-wrap">
+				<div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
+				<div class="socials-text">Follow Me</div>
+				<ul class="socials">
+				<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/sonicakat" target="_blank">Ig</a></span></li>
+				<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/in/sonicakatoch" target="_blank">in</a></span></li>
+				<li><span class="parallax-wrap"><a class="parallax-element" href="https://twitter.com/sonicakatoch" target="_blank">Tw</a></span></li>
+				<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.net/sonicakatoch" target="_blank">Be</a></span></li>
+			</ul>
+		</div> -->
+
 	</div>
-	<!--/Main -->
-
-
-	<!-- Footer -->
-	<footer class="hidden">
-		<div id="footer-container">
-
-			<!-- <div class="copyright-wrap">
-			<div class="copyright-icon"><i class="fa fa-copyright" aria-hidden="true"></i></div>
-			<div class="copyright-text">Copyright</div>
-			<div class="copyright">
-			<p>2018 © <a class="link" target="_blank" href="https://www.clapat.com/themes/grenada/">Grenada Theme</a>. Design by <a class="link" target="_blank" href="https://www.clapat.com/">Clapat</a>.</p>
-		</div>
-	</div> -->
-
-	<div class="socials-wrap">
-		<div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
-		<div class="socials-text">Follow Me</div>
-		<ul class="socials">
-			<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/sonicakat" target="_blank">Ig</a></span></li>
-			<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/in/sonicakatoch" target="_blank">in</a></span></li>
-			<li><span class="parallax-wrap"><a class="parallax-element" href="https://twitter.com/sonicakatoch" target="_blank">Tw</a></span></li>
-			<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.net/sonicakatoch" target="_blank">Be</a></span></li>
-		</ul>
-	</div>
-
-</div>
 </footer>
 <!--/Footer -->
 
