--- a/patheon.html
+++ b/patheon.html
@@ -217,7 +217,7 @@
             <footer class="hidden">
         			<div id="footer-container">
 
-        		<div class="socials-wrap">
+        		<!-- <div class="socials-wrap">
         			<div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
         			<div class="socials-text">Follow Me</div>
         			<ul class="socials">
@@ -226,7 +226,7 @@
         				<li><span class="parallax-wrap"><a class="parallax-element" href="https://twitter.com/sonicakatoch" target="_blank">Tw</a></span></li>
         				<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.net/sonicakatoch" target="_blank">Be</a></span></li>
         			</ul>
-        		</div>
+        		</div> -->
 
         	</div>
         </footer>
