--- a/oddseoul.html
+++ b/oddseoul.html
@@ -163,9 +163,10 @@
 
               <!-- Video Player -->
               <div class="hero-video-wrapper">
-                <video width="100%" height="100%" autoplay>
+                <video width="100%" height="100%" loop mute autoplay>
                   <!-- <source src="video/oddseoul-animation.mp4" type="video/mp4"> -->
                   <source src="video/oddseoul-animation-2.mp4" type="video/mp4">
+                    <source src="video/oddseoul-animation-2.mp4" type="video/webm">
                   </video>
                 </div>
 
