--- a/patheon.html
+++ b/patheon.html
@@ -72,6 +72,7 @@
     										<ul data-breakpoint="1025" class="flexnav">
     											<li class="link menu-timeline active"><a class="link" href="#">Index</a>
     												<ul>
+															<li><a class="ajax-link" href="patheon.html" data-type="page-transition">Fashion Tech</a></li>
 															<li><a class="ajax-link" href="patheon.html" data-type="page-transition">Patheon</a></li>
 															<li><a class="ajax-link" href="bite-rite.html" data-type="page-transition">Bite Rite</a></li>
 															<li><a class="ajax-link" href="kendrick.html" data-type="page-transition">Kendrick</a></li>
