--- a/usability.html
+++ b/usability.html
@@ -72,6 +72,7 @@
 										<ul data-breakpoint="1025" class="flexnav">
 											<li class="link menu-timeline active"><a class="link" href="#">Index</a>
 												<ul>
+													<li><a class="ajax-link" href="patheon.html" data-type="page-transition">Fashion Tech</a></li>
 													<li><a class="ajax-link" href="patheon.html" data-type="page-transition">Patheon</a></li>
 													<li><a class="ajax-link" href="bite-rite.html" data-type="page-transition">Bite Rite</a></li>
 													<li><a class="ajax-link" href="kendrick.html" data-type="page-transition">Kendrick</a></li>
@@ -183,7 +184,7 @@
 						<div class="next-project-wrap">
 							<div class="next-project-image" style="background-image:url(images/patheon-hero.jpg)"></div>
 							<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="patheon.html">
-								<div class="main-title">Patheon<span></div>
+								<div class="main-title">Fashion <span>Tech</span></div>
 									<div class="main-subtitle">Next Project</div>
 								</a>
 							</div>
