fashion tech copy edit

--- a/fashiontech.html
+++ b/fashiontech.html
@@ -112,7 +112,7 @@
 						<div id="hero-caption" class="text-align-center">
 							<div class="inner">
 								<h1 class="hero-title">Fashion <span>Tech</span></h1>
-								<h2 class="hero-subtitle">A visual identity developed for the Women in Fashion Technology program at Fashion Exchange Toronto.</h2>
+								<h2 class="hero-subtitle">A UX/UI design created for the Women in Fashion Technology program at Fashion Exchange Toronto.</h2>
 
 								<div class="scroll-down-wrap no-border link">
 									<a href="#" class="section-down-arrow ">
