--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 							<a class="ajax-link-project" data-type="page-transition" href="fashiontech.html">
 								<div class="slide-title" data-number="01"><span>Fashion Tech</span></div>
 							</a>
-							<div class="slide-caption" data-slide-caption="1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+							<div class="slide-caption" data-slide-caption="1">A UX/UI design created for the Women in Fashion Technology program at Fashion Exchange Toronto.</div>
 						</div>
 						<!--/Section Slide -->
 
