--- a/usability.html
+++ b/usability.html
@@ -182,8 +182,8 @@
 					<!-- Project Navigation -->
 					<div id="project-nav">
 						<div class="next-project-wrap">
-							<div class="next-project-image" style="background-image:url(images/patheon-hero.jpg)"></div>
-							<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="patheon.html">
+							<div class="next-project-image" style="background-image:url(images/fashiontech-hero.jpg)"></div>
+							<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="fashiontech.html">
 								<div class="main-title">Fashion <span>Tech</span></div>
 									<div class="main-subtitle">Next Project</div>
 								</a>
