--- a/fashiontech.html
+++ b/fashiontech.html
@@ -321,8 +321,8 @@
 					<!-- Project Navigation -->
 					<div id="project-nav">
 						<div class="next-project-wrap">
-							<div class="next-project-image" style="background-image:url(images/rising-hero.jpg)"></div>
-							<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="rising-temp.html">
+							<div class="next-project-image" style="background-image:url(images/patheon-hero.jpg)"></div>
+							<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="patheon.html">
 								<div class="main-title">Patheon</div>
 								<div class="main-subtitle">Next Project</div>
 							</a>
