--- a/fashiontech.html
+++ b/fashiontech.html
@@ -154,9 +154,7 @@
 								</div>
 
 								<div class="two_third has-animation last" data-delay="50">
-									<p>Fashion Exchange Toronto launched the Women in Fashion Technology program in the Fall of 2018. As an Interaction Designer for this project, I was tasked to create a new brand identity, marketing material, and implement new interactive elements to FX’s existing online webpage.
-
-									With the addition of the Education section, prospective students are now able to explore the various programs offered at Fashion Exchange and inquire directly to Faculty responsible for enrolment.</p>
+									<p>Fashion Exchange Toronto launched the Women in Fashion Technology program in the Fall of 2018. As an Interaction Designer for this project, I was tasked to create a new brand identity, marketing material, and implement new interactive elements to FX’s existing online webpage. <br><br> With the addition of the Education section, prospective students are now able to explore the various programs offered at Fashion Exchange and inquire directly to Faculty responsible for enrolment.</p>
 									<a href="http://fashionexchangetoronto.com/education" target="_blank" class="link"><span>Visit Fashion Exchange</span></a>
 								</div>
 
