--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 			<!-- Showcase Gallery -->
 			<div id="image-slider">
 				<div class="image-slider-wrapper">
-					<div class="slider-img" data-slide="1" data-src="images/fashiontech-hero.jpg"></div>
+					<!-- <div class="slider-img" data-slide="1" data-src="images/fashiontech-hero.jpg"></div> -->
 					<div class="slider-img" data-slide="2" data-src="images/patheon-hero.jpg"></div>
 					<div class="slider-img" data-slide="3" data-src="images/bite-hero.jpg"></div>
 					<div class="slider-img" data-slide="4" data-src="images/kendrick-hero.jpg"></div>
