added PC Express

--- a/pcexpress.html
+++ b/pcexpress.html
@@ -74,8 +74,8 @@
 												<ul>
 													<li><a class="ajax-link" href="pcexpress.html" data-type="page-transition">PC Express</a></li>
 													<!-- <li><a class="ajax-link" href="shoppersdrugmart.html" data-type="page-transition">Shoppers Drug Mart</a></li> -->
-                          <li><a class="ajax-link" href="fashiontech.html" data-type="page-transition">Fashion Tech</a></li>
-                          <li><a class="ajax-link" href="patheon.html" data-type="page-transition">Patheon</a></li>
+													<li><a class="ajax-link" href="fashiontech.html" data-type="page-transition">Fashion Tech</a></li>
+													<li><a class="ajax-link" href="patheon.html" data-type="page-transition">Patheon</a></li>
 													<li><a class="ajax-link" href="bite-rite.html" data-type="page-transition">Bite Rite</a></li>
 													<li><a class="ajax-link" href="kendrick.html" data-type="page-transition">Kendrick</a></li>
 													<li><a class="ajax-link" href="rising-temp.html" data-type="page-transition">Rising Temp</a></li>
@@ -113,8 +113,8 @@
 					<div id="hero-styles" class="parallax-onscroll">
 						<div id="hero-caption" class="text-align-center">
 							<div class="inner">
-								<h1 class="hero-title">Fashion <span>Tech</span></h1>
-								<h2 class="hero-subtitle">A UX/UI design created for the Women in Fashion Technology program at Fashion Exchange Toronto.</h2>
+								<h1 class="hero-title">PC <span>Express</span></h1>
+								<h2 class="hero-subtitle">Designed digital creative for Canada's simplest and most delightful shopping online experience.</h2>
 
 								<div class="scroll-down-wrap no-border link">
 									<a href="#" class="section-down-arrow ">
@@ -130,7 +130,7 @@
 				</div>
 				<div id="hero-bg-wrapper">
 					<div id="hero-image-parallax">
-						<div id="hero-bg-image" style="background-image:url(images/fashiontech-hero.jpg)"></div>
+						<div id="hero-bg-image" style="background-image:url(images/pcx-hero.jpg)"></div>
 					</div>
 				</div>
 				<!--/Hero Section -->
@@ -146,18 +146,17 @@
 							<div class="container">
 
 								<div class="one_third has-animation" data-delay="10">
-
 									<h4>Professional Work</h4>
 									<h7>
-										<dl>UX/UI Design </dl>
-										<dl>Wireframing</dl>
+										<dl>Graphic Design</dl>
 										<dl>Branding</dl>
+										<dl>Animation</dl>
 									</h7>
 								</div>
 
 								<div class="two_third has-animation last" data-delay="50">
-									<p>Fashion Exchange Toronto launched the Women in Fashion Technology program in the Fall of 2018. As an Interaction Designer for this project, I was tasked to create a new brand identity, marketing material, and implement new interactive elements to FX’s existing online webpage. <br><br> With the addition of the Education section, prospective students are now able to explore the various programs offered at Fashion Exchange and inquire directly to Faculty responsible for enrolment.</p>
-									<a href="http://fashionexchangetoronto.com/education" target="_blank" class="link"><span>Visit Fashion Exchange</span></a>
+									<p>Launching across Canada in May 2019, PC Express is an online shopping and delivery service under Loblaw Digital. As a Designer I created digital assets for on-site, print, and social needs which include but are not limited to designing for hero spots and creating animations.</p>
+									<a href="https://www.pcexpress.ca/" target="_blank" class="link"><span>Learn More</span></a>
 								</div>
 
 							</div>
@@ -165,15 +164,13 @@
 						</div>
 						<!--/Row -->
 
-
 						<!-- Row -->
 						<div class="vc_row full">
 
 							<div class="container">
 
 								<figure class="has-animation" data-delay="50" >
-									<img src="images/projects/fx01.jpg" alt="Image Title">
-									<!-- <figcaption>Image Caption</figcaption> -->
+									<img src="images/projects/pcx01.jpg" alt="Image Title">
 								</figure>
 
 							</div>
@@ -187,8 +184,7 @@
 							<div class="container">
 
 								<figure class="has-animation" data-delay="50" >
-									<img src="images/projects/fx02.jpg" alt="Image Title">
-									<!-- <figcaption>Image Caption</figcaption> -->
+									<img src="images/projects/pcx02.jpg" alt="Image Title">
 								</figure>
 
 							</div>
@@ -202,8 +198,7 @@
 							<div class="container">
 
 								<figure class="has-animation" data-delay="50" >
-									<img src="images/projects/fx03.jpg" alt="Image Title">
-									<!-- <figcaption>Image Caption</figcaption> -->
+									<img src="images/projects/pcx03.jpg" alt="Image Title">
 								</figure>
 
 							</div>
@@ -217,8 +212,7 @@
 							<div class="container">
 
 								<figure class="has-animation" data-delay="50" >
-									<img src="images/projects/fx04.jpg" alt="Image Title">
-									<!-- <figcaption>Image Caption</figcaption> -->
+									<img src="images/projects/pcx04.jpg" alt="Image Title">
 								</figure>
 
 							</div>
@@ -232,8 +226,7 @@
 							<div class="container">
 
 								<figure class="has-animation" data-delay="50" >
-									<img src="images/projects/fx05.jpg" alt="Image Title">
-									<!-- <figcaption>Image Caption</figcaption> -->
+									<img src="images/projects/pcx05.jpg" alt="Image Title">
 								</figure>
 
 							</div>
@@ -247,8 +240,7 @@
 							<div class="container">
 
 								<figure class="has-animation" data-delay="50" >
-									<img src="images/projects/fx06.jpg" alt="Image Title">
-									<!-- <figcaption>Image Caption</figcaption> -->
+									<img src="images/projects/pcx06.jpg" alt="Image Title">
 								</figure>
 
 							</div>
@@ -262,8 +254,7 @@
 							<div class="container">
 
 								<figure class="has-animation" data-delay="50" >
-									<img src="images/projects/fx07.jpg" alt="Image Title">
-									<!-- <figcaption>Image Caption</figcaption> -->
+									<img src="images/projects/pcx07.jpg" alt="Image Title">
 								</figure>
 
 							</div>
@@ -277,8 +268,7 @@
 							<div class="container">
 
 								<figure class="has-animation" data-delay="50" >
-									<img src="images/projects/fx08.jpg" alt="Image Title">
-									<!-- <figcaption>Image Caption</figcaption> -->
+									<img src="images/projects/pcx08.jpg" alt="Image Title">
 								</figure>
 
 							</div>
@@ -292,30 +282,13 @@
 							<div class="container">
 
 								<figure class="has-animation" data-delay="50" >
-									<img src="images/projects/fx09.jpg" alt="Image Title">
-									<!-- <figcaption>Image Caption</figcaption> -->
+									<img src="images/projects/pcx09.jpg" alt="Image Title">
 								</figure>
 
 							</div>
 
 						</div>
 						<!--/Row -->
-
-						<!-- Row -->
-						<div class="vc_row full">
-
-							<div class="container">
-
-								<figure class="has-animation" data-delay="50" >
-									<img src="images/projects/fx10.jpg" alt="Image Title">
-									<!-- <figcaption>Image Caption</figcaption> -->
-								</figure>
-
-							</div>
-
-						</div>
-						<!--/Row -->
-
 
 					</div>
 					<!--/Main Page Content -->
@@ -323,48 +296,48 @@
 					<!-- Project Navigation -->
 					<div id="project-nav">
 						<div class="next-project-wrap">
-							<div class="next-project-image" style="background-image:url(images/patheon-hero.jpg)"></div>
-							<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="patheon.html">
-								<div class="main-title">Patheon</div>
-								<div class="main-subtitle">Next Project</div>
-							</a>
+							<div class="next-project-image" style="background-image:url(images/fashiontech-hero.jpg)"></div>
+							<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="fashiontech.html">
+								<div class="main-title">Fashion <span>Tech</span></div>
+									<div class="main-subtitle">Next Project</div>
+								</a>
+							</div>
 						</div>
+						<!--/Project Navigation -->
+
+
 					</div>
-					<!--/Project Navigation -->
-
-
+					<!--/Main Content -->
 				</div>
-				<!--/Main Content -->
-			</div>
-			<!--/Main -->
+				<!--/Main -->
 
 
-			<!-- Footer -->
-			<footer class="hidden">
-				<div id="footer-container">
+				<!-- Footer -->
+				<footer class="hidden">
+					<div id="footer-container">
 
-					<!-- <div class="copyright-wrap">
-					<div class="copyright-icon"><i class="fa fa-copyright" aria-hidden="true"></i></div>
-					<div class="copyright-text">Copyright</div>
-					<div class="copyright">
-					<p>2018 © <a class="link" target="_blank" href="https://www.clapat.com/themes/grenada/">Grenada Theme</a>. Design by <a class="link" target="_blank" href="https://www.clapat.com/">Clapat</a>.</p>
-				</div>
-			</div> -->
+						<!-- <div class="copyright-wrap">
+						<div class="copyright-icon"><i class="fa fa-copyright" aria-hidden="true"></i></div>
+						<div class="copyright-text">Copyright</div>
+						<div class="copyright">
+						<p>2018 © <a class="link" target="_blank" href="https://www.clapat.com/themes/grenada/">Grenada Theme</a>. Design by <a class="link" target="_blank" href="https://www.clapat.com/">Clapat</a>.</p>
+					</div>
+				</div> -->
 
-			<!-- <div class="socials-wrap">
+				<!-- <div class="socials-wrap">
 				<div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
 				<div class="socials-text">Follow Me</div>
 				<ul class="socials">
-					<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/sonicakat" target="_blank">Ig</a></span></li>
-					<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/in/sonicakatoch" target="_blank">in</a></span></li>
-					<li><span class="parallax-wrap"><a class="parallax-element" href="https://twitter.com/sonicakatoch" target="_blank">Tw</a></span></li>
-					<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.net/sonicakatoch" target="_blank">Be</a></span></li>
-				</ul>
-			</div> -->
+				<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/sonicakat" target="_blank">Ig</a></span></li>
+				<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/in/sonicakatoch" target="_blank">in</a></span></li>
+				<li><span class="parallax-wrap"><a class="parallax-element" href="https://twitter.com/sonicakatoch" target="_blank">Tw</a></span></li>
+				<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.net/sonicakatoch" target="_blank">Be</a></span></li>
+			</ul>
+		</div> -->
 
-		</div>
-	</footer>
-	<!--/Footer -->
+	</div>
+</footer>
+<!--/Footer -->
 
 
 </div>
