--- a/about.html
+++ b/about.html
@@ -71,6 +71,8 @@
 										<ul data-breakpoint="1025" class="flexnav">
 											<li class="link menu-timeline active"><a class="link" href="#">Index</a>
 												<ul>
+													<li><a class="ajax-link" href="pcexpress.html" data-type="page-transition">PC Express</a></li>
+													<!-- <li><a class="ajax-link" href="shoppersdrugmart.html" data-type="page-transition">Shoppers Drug Mart</a></li> -->
 													<li><a class="ajax-link" href="fashiontech.html" data-type="page-transition">Fashion Tech</a></li>
 													<li><a class="ajax-link" href="patheon.html" data-type="page-transition">Patheon</a></li>
 													<li><a class="ajax-link" href="bite-rite.html" data-type="page-transition">Bite Rite</a></li>
