--- a/rising-temp.html
+++ b/rising-temp.html
@@ -72,6 +72,8 @@
 										<ul data-breakpoint="1025" class="flexnav">
 											<li class="link menu-timeline active"><a class="link" href="#">Index</a>
 												<ul>
+													<li><a class="ajax-link" href="pcexpress.html" data-type="page-transition">PC Express</a></li>
+													<!-- <li><a class="ajax-link" href="shoppersdrugmart.html" data-type="page-transition">Shoppers Drug Mart</a></li> -->
 													<li><a class="ajax-link" href="fashiontech.html" data-type="page-transition">Fashion Tech</a></li>
 													<li><a class="ajax-link" href="patheon.html" data-type="page-transition">Patheon</a></li>
 													<li><a class="ajax-link" href="bite-rite.html" data-type="page-transition">Bite Rite</a></li>
@@ -152,7 +154,7 @@
 						<div class="container">
 
 							<div class="one_third has-animation" data-delay="10">
-								<h4>About the Project</h4>
+								<h4>PersonalProject</h4>
 								<h7>
 									<dl>Experience Website</dl>
 									<dl>Research</dl>
