--- a/pcexpress.html
+++ b/pcexpress.html
@@ -114,7 +114,7 @@
 						<div id="hero-caption" class="text-align-center">
 							<div class="inner">
 								<h1 class="hero-title">PC <span>Express</span></h1>
-								<h2 class="hero-subtitle">Designed digital creative for Canada's simplest and most delightful shopping online experience.</h2>
+								<h2 class="hero-subtitle">Designed digital creative for Canada's simplest and most delightful online shopping experience.</h2>
 
 								<div class="scroll-down-wrap no-border link">
 									<a href="#" class="section-down-arrow ">
