--- a/usability.html
+++ b/usability.html
@@ -184,8 +184,8 @@
 					<!-- Project Navigation -->
 					<div id="project-nav">
 						<div class="next-project-wrap">
-							<div class="next-project-image" style="background-image:url(images/fashiontech-hero.jpg)"></div>
-							<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="fashiontech.html">
+							<div class="next-project-image" style="background-image:url(images/pcx-hero.jpg)"></div>
+							<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="pcexpress.html">
 								<div class="main-title">PC <span>Express</span></div>
 									<div class="main-subtitle">Next Project</div>
 								</a>
