--- a/pcexpress.html
+++ b/pcexpress.html
@@ -155,8 +155,8 @@
 								</div>
 
 								<div class="two_third has-animation last" data-delay="50">
-									<p>Launching across Canada in May 2019, PC Express is an online shopping and delivery service under Loblaw Digital. As a Designer I created digital assets for on-site, print, and social needs which include but are not limited to designing for hero spots and creating animations.</p>
-									<a href="https://www.pcexpress.ca/" target="_blank" class="link"><span>Learn More</span></a>
+									<p>Launched across Canada in May 2019, PC Express is an online shopping and delivery service under the Loblaw Enterprise. As a Designer at Loblaw Digital, I created digital assets for on-site, print, and social needs which include but are not limited to designing for hero spots and creating animations.</p>
+									<a href="https://www.pcexpress.ca/" target="_blank" class="link"><span>Visit PC Express</span></a>
 								</div>
 
 							</div>
