--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 							<a class="ajax-link-project" data-type="page-transition" href="pcexpress.html">
 								<div class="slide-title" data-number="01"><span>PC Express</span></div>
 							</a>
-							<div class="slide-caption" data-slide-caption="1">Designed digital creative for Canada's simplest and most delightful online shopping experience.</div>
+							<div class="slide-caption" data-slide-caption="1">Designed digital creative at Loblaw Digital for Canada's simplest and most delightful online shopping experience, PC Express.</div>
 						</div>
 						<!--/Section Slide -->
 
