--- a/otherdesigns.html
+++ b/otherdesigns.html
@@ -185,17 +185,17 @@
 
 												<!-- Collage item with pop-up -->
 												<div class="collage-thumb">
-														<a class="image-link" href="images/projects/rt02.jpg">
-																<img src="images/projects/rt02.jpg" alt="img" />
-																<div class="thumb-info">Caption Image</div>
+														<a class="image-link" href="images/projects/liluzivert.jpg">
+																<img src="images/projects/liluzivert.jpg" alt="img" />
+																<div class="thumb-info">Album Art | Ai & Ps</div>
 														</a>
 												</div>
 
 												<!-- Collage item with pop-up -->
 												<div class="collage-thumb">
-														<a class="image-link" href="images/projects/3d01.jpg">
-																<img src="images/projects/3d01.jpg" alt="img" />
-																<div class="thumb-info">Caption Image</div>
+														<a class="image-link" href="images/projects/3dchess01.jpg">
+																<img src="images/projects/3dchess01.jpg" alt="img" />
+																<div class="thumb-info">Chessboard | Autodesk Maya</div>
 														</a>
 												</div>
 
