--- a/shoppersdrugmart.html
+++ b/shoppersdrugmart.html
@@ -73,7 +73,7 @@
 											<li class="link menu-timeline active"><a class="link" href="#">Index</a>
 												<ul>
 													<li><a class="ajax-link" href="pcexpress.html" data-type="page-transition">PC Express</a></li>
-													<!-- <li><a class="ajax-link" href="shoppersdrugmart.html" data-type="page-transition">Shoppers Drug Mart</a></li> -->
+													<li><a class="ajax-link" href="shoppersdrugmart.html" data-type="page-transition">Shoppers Drug Mart</a></li>
 													<li><a class="ajax-link" href="fashiontech.html" data-type="page-transition">Fashion Tech</a></li>
 													<li><a class="ajax-link" href="patheon.html" data-type="page-transition">Patheon</a></li>
 													<li><a class="ajax-link" href="bite-rite.html" data-type="page-transition">Bite Rite</a></li>
@@ -113,8 +113,8 @@
 					<div id="hero-styles" class="parallax-onscroll">
 						<div id="hero-caption" class="text-align-center">
 							<div class="inner">
-								<h1 class="hero-title">PC <span>Express</span></h1>
-								<h2 class="hero-subtitle">Designed digital creative at Loblaw Digital for Canada's simplest and most delightful online shopping experience, PC Express.</h2>
+								<h1 class="hero-title">Shoppers <span>Drug Mart</span></h1>
+								<h2 class="hero-subtitle">Designed digital creative at Loblaw Digital for Shoppers Drug Mart Beauty Boutique.</h2>
 
 								<div class="scroll-down-wrap no-border link">
 									<a href="#" class="section-down-arrow ">
@@ -130,7 +130,7 @@
 				</div>
 				<div id="hero-bg-wrapper">
 					<div id="hero-image-parallax">
-						<div id="hero-bg-image" style="background-image:url(images/pcx-hero.jpg)"></div>
+						<div id="hero-bg-image" style="background-image:url(images/sdm-2.jpg)"></div>
 					</div>
 				</div>
 				<!--/Hero Section -->
