--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 							<a class="ajax-link-project" data-type="page-transition" href="bite-rite.html">
 								<div class="slide-title" data-number="04"><span>Bite Rite</span></div>
 							</a>
-							<div class="slide-caption" data-slide-caption="4">Eating, with a conscious</div>
+							<div class="slide-caption" data-slide-caption="4">A mobile-first UX/UI design created to provide users a holistic approach when utilizing online food delivery applications.</div>
 						</div>
 						<!--/Section Slide -->
 
@@ -179,7 +179,7 @@
 							<a class="ajax-link-project" data-type="page-transition" href="rising-temp.html">
 								<div class="slide-title" data-number="06"><span>Rising Temp</span></div>
 							</a>
-							<div class="slide-caption" data-slide-caption="6">It is confirmed that human activity has severely impacted the Earth’s current warming pattern. What can we do about it?</div>
+							<div class="slide-caption" data-slide-caption="6">An interactive depiction showcasing how human activity has severely impacted the Earth’s current warming pattern. What can we do about it?</div>
 						</div>
 						<!--/Section Slide -->
 
