--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
 							<div class="container">
 
 								<!-- <h1 class="hero-title">Sonica <span>Katoch</span></h1> -->
-								<h1>Sonica Katoch is currently a Designer at MLSE (Maple Leaf Sports & Entertainment Ltd.) based in Toronto.</h1>
+								<h1>Sonica Katoch is currently a Designer at MLSE (Maple Leaf Sports & Ent.) based in Toronto.</h1>
 
 
 							</div>
